# dr_platform

./: .dockerignore  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
detector/: __init__.py  engine.py  main.py  sliding_window.py
detector/rules/: __init__.py  loader.py  prompt_injection.py  rate_abuse.py  sigma_rule.py  token_abuse.py
detector/rules/sigma/: prompt_injection.yml  rate_abuse.yml  token_abuse.yml
detector/tests/: __init__.py  test_engine.py  test_rules.py  test_sliding_window.py
docker/: Dockerfile  docker-compose.llm.yml  docker-compose.yml
exporter/: __init__.py  main.py
generator/: __init__.py  main.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: detection-alerts.json  infra-health.json  triage-response.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
triage/: __init__.py  main.py  mock.py  prompt.py
triage/tests/: __init__.py  test_mock.py  test_prompt.py
